<resources>
    <string name="app_name">Cura Organization</string>
    <string name="cura_slogan">CURA… Providing a rewarding way of digital healthcare.</string>
    <string name="sign_up_note">Aloha!</string>
    <string name="sign_in_note">Welcome, User</string>
    <string name="sign_in_organization_email">Organization Email</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_forgot_password">Forgot Password</string>
    <string name="sign_in_btn_txt">Sign In</string>
    <string name="sign_in_create_account_prompt_text">New to Cura? </string>
    <string name="sign_in_sign_up_prompt">Sign up</string>
    <string name="forgot_password_intro_note">Oops!</string>
    <string name="reset_password_intro_note">almost done!</string>
    <string name="reset_password_sub_intro_note">Enter your new password</string>
    <string name="reset_password_confirm_password">Confirm Password</string>
    <string name="forgot_password_sub_intro_note">Enter registered organization email below</string>
    <string name="forgot_password_btn_txt">Reset Password</string>
    <string name="forgot_password_remembered_password_text">Remembered Your Password?</string>
    <string name="forgot_password_sign_in_prompt">Sign In</string>
    <string name="forgot_password_email">Registered Organization Email</string>
    <string name="menu_logout">Log Out</string>
    <string name="sign_up_sub_note">Please enter your personal email to get OTP to begin registration</string>
    <string name="registration_sub_note">Please enter your details of driver to register</string>
    <string name="sign_up_state_hint">State</string>
    <string name="sign_up_city_hint">City</string>
    <string name="sign_up_town_hint">Town</string>
    <string name="sign_up_surname">Surname</string>
    <string name="sign_up_first_name">First Name</string>
    <string name="sign_up_personal_email">Enter Your Personal Email</string>
    <string name="sign_up_organization_email">Enter Organization Email</string>
    <string name="sign_up_btn_txt">Register</string>
    <string name="sign_up_existing_account_text">Already have an account?</string>
    <string name="sign_up_sign_in_prompt">Sign In</string>
    <string name="sign_up_phone_number">Phone Number</string>
    <string name="sign_up_gender_male">Male</string>
    <string name="sign_up_gender_female">Female</string>
    <string name="sign_up_blood_group">Blood Group</string>
    <string name="gender_text">Gender</string>
    <string name="sign_up_password">Password</string>
    <string name="otp_message">Check Email for OTP</string>
    <string name="otp_resend_message">Resend OTP in: </string>
    <string name="sign_up_otp_verify_button">Verify</string>
    <string name="sign_up_state_of_origin">State of Origin</string>
    <string name="register_car_note">BienVeniDos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reg_address_title">Enter Address Details</string>
    <string name="reg_address_line_1">Address Line 1</string>
    <string name="reg_address_line_2">Address Line 2 (Optional)</string>
    <string name="reg_address_city">City</string>
    <string name="reg_address_lga">LGA</string>
    <string name="reg_address_state">State</string>
    <string name="reg_address_postal_code">Postal Code</string>
    <string name="btn_prev">Prev</string>
    <string name="btn_next">Next</string>
    <string name="reg_days_of_operation_title">Enter Days of Operation</string>
    <string name="cb_monday_text">Mon</string>
    <string name="cb_sunday_text">Sun</string>
    <string name="cb_saturday_text">Sat</string>
    <string name="cb_friday_text">Fri</string>
    <string name="cb_thursday_text">Thurs</string>
    <string name="cb_wednesday_text">Wed</string>
    <string name="cb_tuesday_text">Tue</string>
    <string name="reg_open_time_hint">Open Time</string>
    <string name="reg_close_time_hint">Close Time</string>
    <string name="title_day_of_operation">Day</string>
    <string name="reg_open_time_hint_short">Open</string>
    <string name="reg_close_time_hint_short">Close</string>
    <string name="reg_registry_identifiers_title">Enter Registry Information</string>
    <string name="reg_id_state_id">State Unique ID</string>
    <string name="reg_id_reg_no">Registration No</string>
    <string name="reg_ownership_type">Ownership Type</string>
    <string name="reg_facility_level">Facility Level</string>
    <string name="reg_facility_level_option">Facility Level Option</string>
    <string name="reg_ownership">Ownership</string>
    <string name="reg_organization_details_title">Organization Details</string>
    <string name="reg_organization_name">Organization Name</string>
    <string name="reg_organization_alias_name">Organization Alias Name</string>
    <string name="reg_organization_email">Organization Email</string>
    <string name="reg_organization_password">Password</string>
    <string name="reg_organization_confirm_password">Confirm Password</string>
    <string name="reg_organization_identifier">National Identification</string>
    <string name="reg_id_type">Type</string>
    <string name="reg_organization_start_date">Organization Start Date</string>
    <string name="sign_in_sub_note">Please Input Credentials To Sign In</string>
    <string name="otp_input_text">Enter OTP</string>
    <string name="reg_organization_address_start_date">Address Start Date</string>
    <string name="open_time_picker_title">Pick Open Time</string>
    <string name="close_time_picker_title">Pick Close Time</string>
    <string name="time_picker_ok">OK</string>
    <string name="time_picker_cancel">CANCEL</string>
    <string name="btn_personnel">Personnel</string>
    <string name="btn_services">Services</string>
    <string name="profile">Profile</string>
    <string name="token">Token</string>
    <string name="types_doctors">Doctors</string>
    <string name="doctors_expand_arrow">Expand Doctors List</string>
    <string name="nurses_title">Nurses</string>
    <string name="nurses_expand_arrow">Expand Nurses List</string>
    <string name="pharmacists_title">Pharmacists</string>
    <string name="pharmacists_expand_arrow">Expand Pharmacists List</string>
    <string name="Lab_tech_title">Laboratory Technicians</string>
    <string name="lab_tech_expand_arrow">Expand Lab Tech List</string>
    <string name="personnel_search_hint">Enter Personnel Name</string>
    <string name="other_practitioners">Others</string>
    <string name="Lab_scientist_title">Lab Scientists</string>
    <string name="reg_practitioner_surname">Surname</string>
    <string name="reg_practitioner_title">Title</string>
    <string name="reg_practitioner_other_names">Other Names</string>
    <string name="reg_practitioner_role">Practitioner Role(s)</string>
    <string name="reg_practitioner_id_type">National Identification Type</string>
    <string name="reg_practitioner_email">Practitioner Email</string>
    <string name="practitioners_available_times_title">Available Times</string>
    <string name="practitioners_available_times_expand_arrow">Practitioners Available Times Expand Arrow</string>
    <string name="btn_practitioner_register">Next</string>
    <string name="btn_practitioner_cancel">Cancel</string>
    <string name="reg_practitioner_gender">Gender</string>
    <string name="text_no_data">No Data</string>
    <string name="text_column">:</string>
    <string name="personnel_agg">%1$s :  %2$s</string>
    <string name="person_name">%1$s  %2$s</string>
    <string name="personnel_stats">Personnel Statistics</string>
    <string name="practitioner_email">Email</string>
    <string name="project_name">Cura</string>
    <string name="project_use_case">Organisation</string>
    <string name="sign_up_already_user_text">"Already a user? "</string>
    <string name="services_search_hint">Service</string>
    <string name="services_stats">Services Statistics</string>
    <string name="new_service_category_hint">Service Category</string>
    <string name="new_service_provided_by_hint">Service Provided By</string>
    <string name="new_service_name_hint">Service Name</string>
    <string name="new_service_comment_hint">Comment</string>
    <string name="new_service_specialty">Service Specialty</string>
    <string name="new_service_day_text">Day</string>
    <string name="new_service_open_time_text">Open</string>
    <string name="new_service_close_time_text">Close</string>
    <string name="new_service_provision_text">Service Provision Cost</string>
    <string name="new_service_provision_cost_option_free">Free</string>
    <string name="new_service_provision_cost_option_discount">Discount</string>
    <string name="new_service_provision_cost_option_paid">Paid</string>
    <string name="new_service_contact_email">Service Contact Email</string>
    <string name="new_service_contact_phone_number">Service Contact Phone Number</string>
    <string name="new_service_eligibility">Requirement for Service</string>
    <string name="new_service_program">Service Program</string>
    <string name="new_service_characteristics">Service Features</string>
    <string name="new_service_appointment_required_text">Appointment Required</string>
    <string-array name="new_service_referral_method">
        <item>Online Website</item>
        <item>Email</item>
        <item>Hospital Card</item>
        <item>Practitioner Phone Call</item>
    </string-array>
    <string name="new_service_communication">Communication</string>
    <string name="reg_practitioner_role_communication">Communication Language(s)</string>
    <string name="practitioner_role_title">Practitioner Role</string>
    <string name="practitioner_role_description">Fill in the roles of this practitioner in your organization</string>
    <string name="btn_practitioner_role_register">Done</string>
    <string name="reg_practitioner_role_specialty">Practitioner Specialty(ies)</string>
    <string name="available_services_title">Available Services</string>
    <string name="txt_in_patient_service">In Patient Service</string>
    <string name="txt_outpatient_service">Out Patient Service</string>
    <string name="txt_onsite_lab_service">Onsite Laboratory Service</string>
    <string name="txt_mortuary_service">Mortuary Service</string>
    <string name="txt_medical_service">Medical Service</string>
    <string name="txt_ambulance_service">Ambulance Service</string>
    <string name="services_metrics_title">Services Metrics</string>
    <string name="services_list_title">Services List</string>
    <string name="txt_total_number_of_beds">Total no of beds</string>
    <string name="txt_number_of_available_beds">No of available beds</string>
    <string name="txt_surgical_service">Surgical Services</string>
    <string name="txt_og_service">Obsterics and Gynecology Services</string>
    <string name="txt_pediatrics_service">Pediatrics Services</string>
    <string name="txt_dental_service">Dental Services</string>
    <string name="txt_sc_service">Special Clinical Services</string>
    <string name="add_new_healthcare_service_fab">Add new Healthcare Service Button</string>
    <string name="health_care_service_category_expand_arrow">Expand Healthcare Service Category</string>
    <string name="comment_text">Comment</string>
    <string name="txt_communication">Communication</string>
    <string name="txt_appointment_required">Appointment Required</string>
    <string name="txt_characteristics">Characteristics</string>
    <string name="txt_eligibility">Eligibility</string>
    <string name="txt_provided_byP">Provider</string>
    <string name="txt_provided_by">Provider</string>
    <string name="edit_organization_name">Edit Organisation Name</string>
    <string name="telecom_title">Telecoms</string>
    <string name="profile_telecom_expand_arrow">Expand Profile Telecom Card</string>
    <string name="addresses_title">Addresses</string>
</resources>