<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.services.ServicesFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_available_services"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="@dimen/margin_mini"
        android:padding="@dimen/padding_mini"
        app:cardElevation="@dimen/padding_mini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_mini"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/available_services_title"
                android:textSize="@dimen/sp16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_outpatient_service"
                android:text="@string/txt_outpatient_service"
                android:visibility="gone"
                tools:visibility="visible"
                android:padding="@dimen/padding_mini"
                app:drawableStartCompat="@drawable/ic_red_cross"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="In Patient Service"
                android:visibility="gone"
                tools:visibility="visible"
                android:text="@string/txt_in_patient_service"
                android:id="@+id/txt_inpatient_service"
                android:padding="@dimen/padding_mini"
                app:drawableStartCompat="@drawable/ic_red_cross"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"
                android:text="@string/txt_onsite_lab_service"
                android:id="@+id/txt_onsite_lab_service"
                android:padding="@dimen/padding_mini"
                app:drawableStartCompat="@drawable/ic_red_cross"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"
                android:text="@string/txt_mortuary_service"
                android:id="@+id/txt_mortuary_service"
                android:padding="@dimen/padding_mini"
                app:drawableStartCompat="@drawable/ic_red_cross"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"
                android:text="@string/txt_medical_service"
                android:id="@+id/txt_medical_service"
                android:padding="@dimen/padding_mini"
                app:drawableStartCompat="@drawable/ic_red_cross"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"
                android:text="@string/txt_ambulance_service"
                android:id="@+id/txt_ambulance_service"
                android:padding="@dimen/padding_mini"
                app:drawableStartCompat="@drawable/ic_red_cross" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/card_services_metrics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_margin="@dimen/margin_mini"
            android:padding="@dimen/padding_mini"
            app:cardElevation="@dimen/padding_mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_available_services">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_mini"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/services_metrics_title"
                    android:textSize="@dimen/sp16" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:text="@string/txt_total_number_of_beds"
                        android:padding="@dimen/padding_mini"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:visibility="gone"
                        tools:visibility="visible"
                        tools:text="23"
                        android:id="@+id/txt_total_number_of_beds"
                        android:padding="@dimen/padding_mini"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:text="@string/txt_number_of_available_beds"
                        android:padding="@dimen/padding_mini"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:visibility="gone"
                        tools:visibility="visible"
                        tools:text="23"
                        android:id="@+id/txt_number_of_available_beds"
                        android:padding="@dimen/padding_mini"/>


                </LinearLayout>




            </LinearLayout>

        </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/card_services_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_mini"
            android:padding="@dimen/padding_mini"
            app:cardElevation="@dimen/padding_mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_services_metrics">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_mini"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/services_list_title"
                    android:textSize="@dimen/sp16" />

                <LinearLayout
                    android:id="@+id/layout_surgical_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:padding="@dimen/padding_mini">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_surgical_service"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_surgical_services_list"
                        tools:text="App, App, App"
                        android:textStyle="italic"
                        android:textSize="@dimen/sp12"
                        android:padding="@dimen/padding_mini"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layout_og_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:padding="@dimen/padding_mini">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_og_service"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_og_services_list"
                        tools:text="App, App, App"
                        android:textStyle="italic"
                        android:textSize="@dimen/sp12"
                        android:padding="@dimen/padding_mini"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layout_pediatrics_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:padding="@dimen/padding_mini">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_pediatrics_service"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_pediatrics_services_list"
                        tools:text="App, App, App"
                        android:textStyle="italic"
                        android:textSize="@dimen/sp12"
                        android:padding="@dimen/padding_mini"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layout_dental_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:padding="@dimen/padding_mini">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_dental_service"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_dental_services_list"
                        tools:text="App, App, App"
                        android:textStyle="italic"
                        android:textSize="@dimen/sp12"
                        android:padding="@dimen/padding_mini"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layout_sc_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:padding="@dimen/padding_mini">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_sc_service"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_sc_services_list"
                        tools:text="App, App, App"
                        android:textStyle="italic"
                        android:textSize="@dimen/sp12"
                        android:padding="@dimen/padding_mini"/>

                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>